<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_five"
    android:layout_margin="@dimen/margin_three"
    android:orientation="horizontal"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/txt_floor"
        android:layout_width="@dimen/zero_size"
        android:layout_weight="1"
        android:layout_height="@dimen/height_size"
        android:text="@string/lbl_up"
        android:gravity="center"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_three"
        android:textSize="@dimen/button_text_size"
        android:textColor="@android:color/transparent"
        android:background="@drawable/border_ideal"/>

    <Button
        android:id="@+id/btn_up"
        android:layout_width="@dimen/zero_size"
        android:layout_weight="1"
        android:layout_height="@dimen/height_size"
        android:text="@string/lbl_up"
        android:gravity="center"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_three"
        android:textSize="@dimen/button_text_size"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/button_selector"/>

    <Button
        android:id="@+id/btn_down"
        android:layout_width="@dimen/zero_size"
        android:layout_weight="1"
        android:layout_height="@dimen/height_size"
        android:text="@string/lbl_down"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:layout_margin="@dimen/margin_three"
        android:textSize="@dimen/button_text_size"
        android:background="@drawable/button_selector"/>


</LinearLayout>